temporary portofolio ok

--- a/homepage-id.html
+++ b/homepage-id.html
@@ -130,40 +130,58 @@
       </div>
 
       <div class="box">
-        <div class="card">
-          <i class="fas fa-bars"> </i>
-          <h5>Website</h5>
-          <div class="pra">
-            <p>
-              Blog website responsive dengan banyak bahasa. 
-            </p>
-            <p style="text-align: center">
-              <a href="#" class="button">more</a>
-            </p>
+
+        <div class="block">
+          <div class="card">
+            <i class="fas fa-bars"> </i>
+            <h5>Website</h5>
+            <div class="pra">
+              <p>
+                Blog website responsive dengan banyak bahasa. 
+              </p>
+              <p style="text-align: center">
+                <a href="#" class="button">more</a>
+              </p>
+            </div>
+          </div>
+          <div class="pic">
+            <img src="img/pic1.png" alt="" />
           </div>
         </div>
-        <div class="card">
-          <i class="fas fa-user"> </i>
-          <h5>Customer Relationsip Management </h5>
-          <div class="pra">
-            <p>
-              Sistem CRM digunakan untuk menorganisir data-data dari pengguna, juga menyediakan semua alat yang dibutuhkan untuk mengatur informasi orang-orang yang diperlukan di dalam bisnis.
-            </p>
-            <p style="text-align: center">
-              <a href="#" class="button">more</a>
-            </p>
+
+        <div class="block">
+          <div class="card">
+            <i class="fas fa-user"> </i>
+            <h5>Customer Relationsip Management </h5>
+            <div class="pra">
+              <p>
+                Sistem CRM digunakan untuk menorganisir data-data dari pengguna, juga menyediakan semua alat yang dibutuhkan untuk mengatur informasi orang-orang yang diperlukan di dalam bisnis.
+              </p>
+              <p style="text-align: center">
+                <a href="#" class="button">more</a>
+              </p>
+            </div>
+          </div>
+          <div class="pic">
+            <img src="img/pic2.png" alt="" />
           </div>
         </div>
-        <div class="card">
-          <i class="fas fa-bell"> </i>
-          <h5>e-commerce</h5>
-          <div class="pra">
-            <p>
-              E-commerce (perdagangan elektronik) pembelian dan penjualan barang dan jasa, atau transmisi dana atau data, melalui internet, Customer juga bisa memilih di dalam halaman serta memesan dan melakukan pembayaran melalui credit card.
-            </p>
-            <p style="text-align: center">
-              <a href="#" class="button">more</a>
-            </p>
+
+        <div class="block">
+          <div class="card">
+            <i class="fas fa-bell"> </i>
+            <h5>e-commerce</h5>
+            <div class="pra">
+              <p>
+                E-commerce (perdagangan elektronik) pembelian dan penjualan barang dan jasa, atau transmisi dana atau data, melalui internet, Customer juga bisa memilih di dalam halaman serta memesan dan melakukan pembayaran melalui credit card.
+              </p>
+              <p style="text-align: center">
+                <a href="#" class="button">more</a>
+              </p>
+            </div>
+          </div>
+          <div class="pic">
+            <img src="img/pic3.png" alt="" />
           </div>
         </div>
       </div>
