--- a/homepage-jp.html
+++ b/homepage-jp.html
@@ -128,41 +128,58 @@
     </div>
 
     <div class="box">
-      <div class="card">
-        <i class="fas fa-bars"> </i>
-        <h5>ウエブサイト</h5>
-        <div class="pra">
-          <p>
-            レスポンシブな多言語ブログウェブサイト, 
-          </p>
-          <p style="text-align: center">
-            <a href="#" class="button">もっと読む</a>
-          </p>
+      <div class="block">
+        <div class="card">
+          <i class="fas fa-bars"> </i>
+          <h5>ウエブサイト</h5>
+          <div class="pra">
+            <p>
+              レスポンシブな多言語ブログウェブサイト, 
+            </p>
+            <p style="text-align: center">
+              <a href="#" class="button">もっと読む</a>
+            </p>
+          </div>
+        </div>
+        <div class="pic">
+          <img src="img/pic1.png" alt="" />
         </div>
       </div>
-      <div class="card">
-        <i class="fas fa-user"> </i>
-        <h5>顧客関係管理サイト </h5>
-        <div class="pra">
-          <p>
-            貴重な観客データや洞察を整理し理解するためのCRMシステムは、ビジネスにとって重要な人々に関する情報を管理するためのすべてのツールを提供します。
-          </p>
-          <p style="text-align: center">
-            <a href="#" class="button">もっと読む</a>
-          </p>
+
+      <div class="block">
+        <div class="card">
+          <i class="fas fa-user"> </i>
+          <h5>顧客関係管理サイト </h5>
+          <div class="pra">
+            <p>
+              貴重な観客データや洞察を整理し理解するためのCRMシステムは、ビジネスにとって重要な人々に関する情報を管理するためのすべてのツールを提供します。
+            </p>
+            <p style="text-align: center">
+              <a href="#" class="button">もっと読む</a>
+            </p>
+          </div>
+        </div>
+        <div class="pic">
+          <img src="img/pic2.png" alt="" />
         </div>
       </div>
-      <div class="card">
-        <i class="fas fa-bell"> </i>
-        <h5>e-commerce</h5>
-        <div class="pra">
-          <p>
-            Eコマース（電子商取引）は、インターネット上で商品やサービスの購入と販売、または資金やデータの送信を行うことです。顧客はページで商品を選択し、注文し、クレジットカードで支払います。
-          </p>
-          <p style="text-align: center">
-            <a href="#" class="button">もっと読む</a>
-          </p>
+      
+      <div class="block">
+        <div class="card">
+          <i class="fas fa-bell"> </i>
+          <h5>e-commerce</h5>
+          <div class="pra">
+            <p>
+              Eコマース（電子商取引）は、インターネット上で商品やサービスの購入と販売、または資金やデータの送信を行うことです。顧客はページで商品を選択し、注文し、クレジットカードで支払います。
+            </p>
+            <p style="text-align: center">
+              <a href="#" class="button">もっと読む</a>
+            </p>
+          </div>
         </div>
+      </div>
+      <div class="pic">
+        <img src="img/pic3.png" alt="" />
       </div>
     </div>
   </div>
