--- a/index.html
+++ b/index.html
@@ -129,40 +129,57 @@
       </div>
 
       <div class="box">
-        <div class="card">
-          <i class="fas fa-bars"> </i>
-          <h5>Website</h5>
-          <div class="pra">
-            <p>
-              Responsive Multilanguages blog website, 
-            </p>
-            <p style="text-align: center">
-              <a href="#" class="button">more</a>
-            </p>
+        <div class="block">
+          <div class="card">
+            <i class="fas fa-bars"> </i>
+            <h5>Website</h5>
+            <div class="pra">
+              <p>
+                Responsive Multilanguages blog website, 
+              </p>
+              <p style="text-align: center">
+                <a href="#" class="button">more</a>
+              </p>
+            </div>
+          </div>
+          <div class="pic">
+            <img src="img/pic1.png" alt="" />
           </div>
         </div>
-        <div class="card">
-          <i class="fas fa-user"> </i>
-          <h5>Customer Relationsip Management </h5>
-          <div class="pra">
-            <p>
-              CRM systems for organizing and making sense of valuable audience data and insights, providing all the tools to manage information about people who are important to your business.
-            </p>
-            <p style="text-align: center">
-              <a href="#" class="button">more</a>
-            </p>
+
+        <div class="block">
+          <div class="card">
+            <i class="fas fa-user"> </i>
+            <h5>Customer Relationsip Management </h5>
+            <div class="pra">
+              <p>
+                CRM systems for organizing and making sense of valuable audience data and insights, providing all the tools to manage information about people who are important to your business.
+              </p>
+              <p style="text-align: center">
+                <a href="#" class="button">more</a>
+              </p>
+            </div>
+          </div>
+          <div class="pic">
+            <img src="img/pic2.png" alt="" />
           </div>
         </div>
-        <div class="card">
-          <i class="fas fa-bell"> </i>
-          <h5>e-commerce</h5>
-          <div class="pra">
-            <p>
-              E-commerce (electronic commerce) buying and selling of goods and services, or the transmitting of funds or data, over the internet. Make customer choice their item in the page, order it and pay with credit card.
-            </p>
-            <p style="text-align: center">
-              <a href="#" class="button">more</a>
-            </p>
+
+        <div class="block">
+          <div class="card">
+            <i class="fas fa-bell"> </i>
+            <h5>e-commerce</h5>
+            <div class="pra">
+              <p>
+                E-commerce (electronic commerce) buying and selling of goods and services, or the transmitting of funds or data, over the internet. Make customer choice their item in the page, order it and pay with credit card.
+              </p>
+              <p style="text-align: center">
+                <a href="#" class="button">more</a>
+              </p>
+            </div>
+          </div>
+          <div class="pic">
+            <img src="img/pic3.png" alt="" />
           </div>
         </div>
       </div>
